# r-type

./: CMakeLists.txt  README.md  RFC.txt
anothernetwork/CLIENT/: Network_Client.cpp  Network_Client.hh
anothernetwork/COMMON/: ASocket.cpp  ASocket.hpp  ASocketUnix.cpp  ASocketUnix.hpp  ASocketWin.cpp  ASocketWin.hpp  Factory.hpp  SocketTCP.cpp  SocketTCP.hpp  SocketUDP.cpp  SocketUDP.hpp
anothernetwork/SERVER/: Network_Serveur.cpp  Network_Serveur.hh
client/inc/: ADrawable.hpp  AEntity.hpp  APanel.hpp  AWeapon.hpp  AnimatedSprites.hpp  BasicWeapon.hpp  Button.hpp  Client.hpp  ClientGame.hpp  Game.hpp  GameMessageBox.hpp  Image.hpp  Input.hpp  ListBox.hpp  ListItem.hpp  ListPanel.hpp  MenuPanel.hpp  MessageBox.hpp  Panel.hpp  Player.hpp  RessourceManager.hpp  Text.hpp  TextEntry.hpp  UDPConnectionProblem.hpp
client/src/: ADrawable.cpp  AnimatedSprites.cpp  BasicWeapon.cpp  Button.cpp  Client.cpp  ClientGame.cpp  Game.cpp  GameMessageBox.cpp  Image.cpp  Input.cpp  ListBox.cpp  ListItem.cpp  ListPanel.cpp  MenuPanel.cpp  MessageBox.cpp  Panel.cpp  Player.cpp  RessourceManager.cpp  Text.cpp  TextEntry.cpp  UDPConnectionProblem.cpp  main.cpp
cmake/Modules/: CheckApplyCompilerFlags.cmake
common/inc/: ADLLoader.hpp  AEntity.hpp  AFSHandler.hpp  AMonster.hpp  APacket.hpp  AskListRoom.hpp  BonusTypes.hpp  Config.h.in  CreateRoom.hpp  DLLoaderFactory.hpp  DLManager.hpp  EntitiesTypes.hpp  EnumChecker.hpp  FSFactory.hpp  GetListPlayer.hpp  GetListRoom.hpp  Handshake.hpp  IDLLoader.hpp  IDirHandler.hpp  ILibMonster.hpp  IMonster.hpp  IMonsters.hpp  JoinRoom.hpp  Message.hpp  Observer.hpp  Player.hpp  Room.hpp  RtypeProtoHelper.hpp  ShortResponse.hpp  Singleton.hpp  StartGame.hpp  ThreadPool.hpp  Unused.hpp  Vector.hpp
common/inc/Packet/: APacket.hpp  AskListRoom.hpp  CreateRoom.hpp  EntityDie.hpp  GetListPlayer.hpp  GetListRoom.hpp  Handshake.hpp  JoinRoom.hpp  LaunchMissile.hpp  Message.hpp  MovePacket.hpp  NewBonus.hpp  NewMonster.hpp  ShortResponse.hpp  StartGame.hpp
common/inc/Unix/: DLLoaderUnix.hpp  DirHandlerUnix.hpp  FSHandlerUnix.hpp
common/inc/Win/: DLLoaderWin.hpp  DirHandlerWin.hpp  FSHandlerWin.hpp
common/src/: APacket.cpp  AskListRoom.cpp  CreateRoom.cpp  GetListPlayer.cpp  GetListRoom.cpp  Handshake.cpp  JoinRoom.cpp  Junk.cpp  Message.cpp  Observer.cpp  Player.cpp  ShortResponse.cpp  StartGame.cpp  ThreadPool.cpp
common/src/Packet/: APacket.cpp  AskListRoom.cpp  CreateRoom.cpp  EntityDie.cpp  GetListPlayer.cpp  GetListRoom.cpp  Handshake.cpp  JoinRoom.cpp  LaunchMissile.cpp  Message.cpp  MovePacket.cpp  NewBonus.cpp  NewMonster.cpp  PlayerDie.cpp  ShortResponse.cpp  StartGame.cpp
common/src/Unix/: DirHandlerUnix.cpp  FSHandlerUnix.cpp
common/src/Win/: DirHandlerWin.cpp  FSHandlerWin.cpp
dlmanager/: DLLoaderUnix.cpp  DLLoaderUnix.hh  DLLoaderUnix.hpp  DLLoaderWin.cpp  DLLoaderWin.hh  DLLoaderWin.hpp  DLManager.cpp  DLManager.hh  DLManager.hpp  DirHandlerUnix.cpp  DirHandlerUnix.hh  DirHandlerWin.cpp  DirHandlerWin.hh  IDLLoader.hh  IMonsters.hh
dlmanager/monsters/MonsterADDL/: MonsterADDL.vcxproj  Monsters.hh
dlmanager/monsters/MonstersADDL/: MonsterADDL.vcxproj.filters  Monsters.cpp  Monsters.hh
dlmanager/monsters/MonstersBDDL/: Monsters.cpp  Monsters.hh  MonstersBDDL.vcxproj
monsters/: CMakeLists.txt
monsters/BlorbMonster/: CMakeLists.txt  Monster.cpp  Monster.hpp
monsters/ExampleMonster/: CMakeLists.txt  Monster.cpp  Monster.hpp
monsters/MegaBlorbMonster/: CMakeLists.txt  Monster.cpp  Monster.hpp
network/src/: ClientHelper.cpp
server/inc/: AEntity.hpp  Bonus.hpp  Client.hpp  ClientGame.hpp  ClientLobby.hpp  Lobby.hpp  Monster.hpp  Server.hpp  ServerGame.hpp  ServerRoom.hpp  TaskTest.hpp  ThreadPool.hpp
server/src/: AEntity.cpp  Bonus.cpp  Client.cpp  ClientGame.cpp  ClientLobby.cpp  Lobby.cpp  Monster.cpp  Server.cpp  ServerGame.cpp  ServerRoom.cpp  ThreadPool.cpp  main.cpp
